--- a/DFSDM_DAC_Test/WiFi_HTTP_Server/STM32CubeIDE/Application/User/boards.cfg
+++ b/DFSDM_DAC_Test/WiFi_HTTP_Server/STM32CubeIDE/Application/User/boards.cfg
@@ -1,7 +1,7 @@
 board_receiving = false
-ssid = Dinowifi
-password = shuangdu1976!
+ssid = Board
+password = stm32l4s5
 # either WPA_PSK, WPA2_PSK, OPEN
 security = WPA2_PSK
-host_ip = 10.0.0.215
+host_ip = 192.168.112.244
 
